# ChangeLog for dev-haskell/convertible
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/convertible/ChangeLog,v 1.6 2014/07/03 11:23:57 gienah Exp $

*convertible-1.1.0.0-r1 (03 Jul 2014)

  03 Jul 2014; Mark Wright <gienah@gentoo.org> +convertible-1.1.0.0-r1.ebuild:
  Bump convertible to 1.1.0.0-r1

  06 Dec 2012; Sergei Trofimovich <slyfox@gentoo.org>
  convertible-1.0.10.0.ebuild, convertible-1.0.11.1.ebuild:
  Get rid of 'dev-haskell/time' depend as it's a ghc's core library.

  12 Sep 2012; Alexander Vershilov <qnikst@gentoo.org>
  convertible-1.0.10.0.ebuild, convertible-1.0.11.1.ebuild:
  move dev-haskell/convertible/convertible-1.0.11.1.ebuild ebuild to
  mirror://hackage

*convertible-1.0.11.1 (13 May 2012)

  13 May 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +convertible-1.0.11.1.ebuild:
  Version bump.

  01 Aug 2011; Sergei Trofimovich <slyfox@gentoo.org>
  convertible-1.0.10.0.ebuild, +files/convertible-1.0.10.0-time-1.2.patch:
  Future proof against upcoming ghc-7.

*convertible-1.0.10.0 (12 Jun 2011)

  12 Jun 2011; Sergei Trofimovich <slyfox@gentoo.org>
  +convertible-1.0.10.0.ebuild, +metadata.xml:
  Initial version. New package: Typeclasses and instances library for
  converting between types.