@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst prerm setup test
-DEPEND=dev-haskell/mtl:=[profile?] >=dev-haskell/text-0.7:=[profile?] >=dev-lang/ghc-6.12.1:= test? ( dev-haskell/hunit:=[profile?] >=dev-haskell/quickcheck-2.0:2=[profile?] >=dev-haskell/testpack-2.0:=[profile?] ) >=dev-haskell/cabal-1.8.0.2 doc? ( dev-haskell/haddock ) hscolour? ( dev-haskell/hscolour ) >=dev-haskell/cabal-1.1.4
+DEPEND=dev-haskell/mtl:=[profile?] >=dev-haskell/text-0.7:=[profile?] >=dev-lang/ghc-6.12.1:= >=dev-haskell/cabal-1.8.0.2 test? ( dev-haskell/hunit:=[profile?] >=dev-haskell/quickcheck-2.0:2=[profile?] >=dev-haskell/testpack-2.0:=[profile?] ) doc? ( dev-haskell/haddock ) hscolour? ( dev-haskell/hscolour ) >=dev-haskell/cabal-1.1.4
 DESCRIPTION=Typeclasses and instances for converting between types
 EAPI=5
 HOMEPAGE=http://hackage.haskell.org/cgi-bin/hackage-scripts/package/convertible
 IUSE=test doc hscolour profile
 KEYWORDS=~amd64 ~x86
 LICENSE=BSD
-RDEPEND=dev-haskell/mtl:=[profile?] >=dev-haskell/text-0.7:=[profile?] >=dev-lang/ghc-6.12.1:= test? ( dev-haskell/hunit:=[profile?] >=dev-haskell/quickcheck-2.0:2=[profile?] >=dev-haskell/testpack-2.0:=[profile?] )
+RDEPEND=dev-haskell/mtl:=[profile?] >=dev-haskell/text-0.7:=[profile?] >=dev-lang/ghc-6.12.1:=
 SLOT=0/1.1.0.0
 SRC_URI=mirror://hackage/packages/archive/convertible/1.1.0.0/convertible-1.1.0.0.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	ghc-package	9dd58db252d8252779bb74ed015196e3	haskell-cabal	b6154aeaa4dfbbc6d8a66d7f739c22d1	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=088c528cf4a3b0faefaf419914584e51
+_md5_=b5c3915bd9371924e579c24b9c79a788
