@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/convertible
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/convertible/ChangeLog,v 1.6 2014/07/03 11:23:57 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/convertible/ChangeLog,v 1.7 2014/07/03 14:03:47 gienah Exp $
+
+  03 Jul 2014; Mark Wright <gienah@gentoo.org> convertible-1.1.0.0-r1.ebuild:
+  QA: move test? conditional from RDEPEND to DEPEND in convertible-1.1.0.0-r1
 
 *convertible-1.1.0.0-r1 (03 Jul 2014)
 
